# app.js
@@ -2,6 +2,8 @@ const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const yaml = require('yamljs');
 const swaggerDocument = yaml.load('./openapi.yaml');
+const schema = require('./graphql/schema');
+const { graphqlHTTP } = require('express-graphql');
 require('dotenv').config();
 
 
@@ -24,6 +26,12 @@ app.use((err, req, res, next) => {
   console.error(err.stack);
   res.status(500).json({ error: 'Erreur interne du serveur' });
 });
+
+// Route GraphQL
+app.use('/graphql', graphqlHTTP({
+  schema,
+  graphiql: true // Active l'interface GraphiQL pour tester les requêtes
+}));
 
 app.listen(3000, () => {
   console.log('Serveur démarré sur http://localhost:3000');
